--- a/app/src/main/res/layout/activity_heroes_list.xml
+++ b/app/src/main/res/layout/activity_heroes_list.xml
@@ -5,7 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/colorPrimary"
-        tools:context=".SplashActivity">
+        tools:context=".view.activities.HeroesListActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
