--- a/app/src/main/res/layout/row_hero.xml
+++ b/app/src/main/res/layout/row_hero.xml
@@ -1,52 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/generic_margin"
-    card_view:cardBackgroundColor="@color/grayLight"
-    android:clickable="true"
-    android:focusable="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <data>
+        <variable name="heroModel" type="com.example.androidkotlinseed.domain.SuperHero"/>
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="?attr/selectableItemBackground">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/generic_margin"
+        card_view:cardBackgroundColor="@color/grayLight"
+        android:clickable="true"
+        android:focusable="true">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="@dimen/generic_margin">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="?attr/selectableItemBackground">
 
-            <ImageView
-                android:id="@+id/hero_pic"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/placeholder"
-                tools:ignore="ContentDescription"/>
-        </FrameLayout>
+                android:padding="@dimen/generic_margin">
 
-        <TextView
-            android:id="@+id/hero_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="@dimen/generic_margin"
-            android:textStyle="bold|italic"
-            tools:text="Spiderman"
-            style="@style/AppTheme.TextAppearanceSmallAllCaps">
-        </TextView>
+                <ImageView
+                    android:id="@+id/hero_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/placeholder"
+                    app:imageUrl="@{heroModel.photo}"
+                    tools:ignore="ContentDescription"/>
+            </FrameLayout>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/hero_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:padding="@dimen/generic_margin"
+                android:textStyle="bold|italic"
+                android:text="@={heroModel.name}"
+                tools:text="Spiderman"
+                style="@style/AppTheme.TextAppearanceSmallAllCaps">
+            </TextView>
 
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
