--- a/app/src/main/res/layout/activity_heroes_list.xml
+++ b/app/src/main/res/layout/activity_heroes_list.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activities.HeroesListActivity">
+        tools:context=".view.activities.HeroesListActivityMvc">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
