View Mvc for heroDetail

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/colorPrimary"
-        tools:context=".SplashActivity">
+        tools:context=".view.activities.SplashActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
