Create photo viewer, manage permissions and improve ImageUtils

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="grayLight">#ccc3ac</color>
     <color name="gray">#b6b6b9</color>
+    <color name="grayTransparent">#bb000000</color>
 </resources>
