--- a/app/src/main/res/drawable/placeholder.xml
+++ b/app/src/main/res/drawable/placeholder.xml
@@ -2,8 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <color
-            android:color="@color/gray">
-        </color>
+        <color android:color="@color/gray"></color>
     </item>
 </selector>
