--- a/app/src/main/res/layout/row_hero_item.xml
+++ b/app/src/main/res/layout/row_hero_item.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-        <variable name="heroModel" type="com.example.androidkotlinseed.domain.SuperHero"/>
-    </data>
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/generic_margin"
-        card_view:cardBackgroundColor="@color/grayLight"
         android:clickable="true"
-        android:focusable="true">
+        android:focusable="true"
+        card_view:cardBackgroundColor="@color/grayLight">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="?attr/selectableItemBackground">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -35,26 +31,32 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/placeholder"
                     app:heroImageUrl="@{heroModel.photo}"
-                    tools:ignore="ContentDescription"/>
+                    app:srcCompat="@drawable/placeholder"
+                    tools:ignore="ContentDescription" />
             </FrameLayout>
 
             <TextView
                 android:id="@+id/hero_name"
+                style="@style/AppTheme.TextAppearanceSmallAllCaps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:ellipsize="end"
+                android:gravity="center"
                 android:maxLines="1"
                 android:padding="@dimen/generic_margin"
-                android:textStyle="bold|italic"
                 android:text="@{heroModel.name}"
-                tools:text="Spiderman"
-                style="@style/AppTheme.TextAppearanceSmallAllCaps">
-            </TextView>
+                android:textStyle="bold|italic"
+                tools:text="Spiderman"></TextView>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <data>
+
+        <variable
+            name="heroModel"
+            type="com.example.androidkotlinseed.domain.SuperHero" />
+    </data>
 </layout>
